Add endpoint collections/projects to list projects by a collection
